# url-shortener

./: .env.example  .gitignore  README.md  db.sqlite3  package-lock.json  package.json  pyproject.toml  requirement.txt  tailwind.config.js
core/: settings.py  urls.py
src/scripts/: app.js  copy_url.js  fontawesome.js  pageInfo.js
templates/layout/: base.html
url_shortner/: models.py  urls.py  views.py
url_shortner/form/: __init__.py  url_form.py
url_shortner/migrations/: 0001_initial.py  0002_url_is_active.py
url_shortner/templates/: _remark.html  index.html
