[tool.poetry]
name = "sideproject2"
version = "0.1.0"
description = ""
authors = ["Kk <iankk0806@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
whitenoise = "^6.7.0"
gunicorn = "^23.0.0"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
